--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navbar navbar-default navbar-fixed-top main-nav">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand">Ariane Pobre</a>
+          <a href="#" class="navbar-brand home-link">Ariane Pobre</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
